manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kokoro-service
spec:
  selector:
    app: kokoro-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
